@@ -760,12 +760,10 @@ int denora_event_server(char *source, int ac, char **av)
     if (denora->protocoldebug) {
         protocol_debug(source, ac, av);
     }
-    if (!stricmp(av[1], "1")) {
+    if (!denora->uplink) {
         denora->uplink = sstrdup(av[0]);
-        do_server(source, av[0], av[1], av[2], TS6UPLINK);
-    } else {
-        do_server(source, av[0], av[1], av[2], NULL);
     }
+    do_server(source, av[0], av[1], av[2], (!stricmp(av[1], "1") ? TS6UPLINK : NULL));
     return MOD_CONT;
 }
 
