@@ -1226,7 +1226,7 @@ int denora_event_server(char *source, int ac, char **av)
     if (denora->protocoldebug) {
         protocol_debug(source, ac, av);
     }
-    if (!stricmp(av[2], "0")) {
+    if (!denora->uplink) {
         denora->uplink = sstrdup(av[0]);
     }
     do_server(source, av[0], av[2], av[4], av[3]);
